✨ feat: 회원가입, 로그인

--- a/local-front/index.html
+++ b/local-front/index.html
@@ -1,40 +1,46 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>ChatGPT Frontend</title>
-</head>
-<body>
-    <h1>ChatGPT Frontend</h1>
+  <head>
+    <title>ChatGPT 채팅</title>
+  </head>
+  <body>
+    <h1>ChatGPT 채팅 화면</h1>
     <div>
-        <label for="question">Enter your question:</label>
-        <input type="text" id="question" />
-        <button onclick="askQuestion()">Ask</button>
+      <label for="question">prompt :</label>
+      <input type="text" id="question" />
+      <button onclick="askQuestion()">전송</button>
     </div>
     <div id="response"></div>
+    <a href="./login.html">로그인</a>
+    <a href="./register.html">회원가입</a>
 
     <script>
-        function askQuestion() {
-            const questionInput = document.getElementById('question');
-            const question = questionInput.value;
-            if (question) {
-                fetch('http://127.0.0.1:8000/', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify({ prompt: question })
-                })
-                .then(response => response.json())
-                .then(data => {
-                    // Display AI's response on the page
-                    const responseDiv = document.getElementById('response');
-                    responseDiv.innerText = `AI's Response: ${data.response}`;
-                })
-                .catch(error => {
-                    console.error('Error:', error);
-                });
-            }
+      function askQuestion() {
+        const questionInput = document.getElementById("question");
+        const question = questionInput.value;
+        if (question) {
+          fetch("http://127.0.0.1:8000/", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify({ prompt: question }),
+          })
+            .then((response) => response.json())
+            .then((data) => {
+              // Display AI's response on the page
+              const responseDiv = document.getElementById("response");
+              responseDiv.innerText += `AI's Response: ${data[0]["response"]}\n`;
+              console.log(data);
+              console.log(data[0]["response"]);
+
+              alert(data[0]["response"]);
+            })
+            .catch((error) => {
+              console.error("Error:", error);
+            });
         }
+      }
     </script>
-</body>
+  </body>
 </html>
