--- a/local-front/login.html
+++ b/local-front/login.html
@@ -18,14 +18,13 @@
     <div id="response"></div>
 
     <script>
+      checkToken();
       function getCookie(name) {
         const value = `; ${document.cookie}`;
         const parts = value.split(`; ${name}=`);
         if (parts.length === 2) return parts.pop().split(";").shift();
       }
-      // const csrfToken = getCookie("csrftoken");
-      console.log(getCookie("csrftoken"));
-      const csrfToken = "ni27wbpk9VdqrKbAuH15xWYCVB29byEz";
+      const csrfToken = getCookie("csrftoken");
 
       document.getElementById("login-form").addEventListener("submit", function (e) {
         e.preventDefault();
@@ -42,13 +41,30 @@
         })
           .then((response) => response.json())
           .then((data) => {
-            console.log(data);
-            alert("로그인 성공. 토큰: " + data.token);
+            if (data.state) {
+              alert("로그인 성공");
+              setTokenToCookie(data.token);
+              window.location.replace("./index.html");
+            } else {
+              alert(data.message);
+            }
           })
           .catch((error) => {
             alert("로그인 실패: " + error.message);
           });
       });
+
+      function setTokenToCookie(token) {
+        const cookieString = `loginToken=${token}; path=/;`;
+        document.cookie = cookieString;
+      }
+      function checkToken() {
+        const loginToken = document.cookie.match("(^|;) ?" + "loginToken" + "=([^;]*)(;|$)");
+        if (loginToken) {
+          alert("이미 로그인된 상태입니다.");
+          window.location.replace("./index.html");
+        }
+      }
     </script>
   </body>
 </html>
