--- a/local-front/index.html
+++ b/local-front/index.html
@@ -16,36 +16,37 @@
       <button onclick="askQuestion()">전송</button>
     </div>
     <div id="response"></div>
-
-    <script>
-      function logout() {
-        document.cookie = `loginToken=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;`;
-      }
-      function askQuestion() {
-        const questionInput = document.getElementById("question");
-        const question = questionInput.value;
-        if (question) {
-          fetch("http://127.0.0.1:8000/", {
-            method: "POST",
-            headers: {
-              "Content-Type": "application/json",
-            },
-            body: JSON.stringify({ prompt: question }),
-          })
-            .then((response) => response.json())
-            .then((data) => {
-              // Display AI's response on the page
-              const responseDiv = document.getElementById("response");
-              responseDiv.innerText += `AI's Response: ${data[0]["response"]}\n`;
-              //   console.log(data);
-              //   console.log(data[0]["response"]);
-              //   alert(data[0]["response"]);
-            })
-            .catch((error) => {
-              console.error("Error:", error);
-            });
-        }
-      }
-    </script>
   </body>
+  <script>
+    function logout() {
+      document.cookie = `loginToken=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;`;
+    }
+
+    function askQuestion() {
+      const questionInput = document.getElementById("question");
+      const question = questionInput.value;
+      if (question) {
+        fetch("http://127.0.0.1:8000/", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify({ prompt: question, room: "test" }),
+        })
+          .then((response) => response.json())
+          .then((data) => {
+            // Display AI's response on the page
+            const responseDiv = document.getElementById("response");
+            responseDiv.innerText += `AI's Response: ${data[0]["response"]}\n`;
+            //   console.log(data);
+            //   console.log(data[0]["response"]);
+            //   alert(data[0]["response"]);
+          })
+          .catch((error) => {
+            console.error("Error:", error);
+          });
+      }
+    }
+  </script>
+  <!-- <script src="./js/main.js"></script> -->
 </html>
