--- a/local-front/login.html
+++ b/local-front/login.html
@@ -5,7 +5,7 @@
     <title>LogIn</title>
   </head>
   <body>
-    <a href="./index.html">채팅</a>
+    <a href="./index.html">메인</a>
     <h1>로그인 화면입니다</h1>
     <form id="login-form">
       <label for="username">사용자 이름:</label>
