✨ feat: Chating 기능

--- a/local-front/chat.html
+++ b/local-front/chat.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="./index.css" />
+    <script src="./js/chat.js"></script>
+    <!-- <script src="./js/chat.js" defer type="module"></script> -->
     <title>ChatGPT 채팅</title>
   </head>
   <body>
@@ -8,69 +11,41 @@
 
     <a href="./index.html">메인</a>
     <div>
-      <label for="question">prompt :</label>
-      <input type="text" id="question" />
-      <button onclick="askQuestion()">전송</button>
+      <!-- <label for="question">prompt :</label> -->
+      <!-- <input type="text" id="question" /> -->
+      <!-- <button onclick="askQuestion()">전송</button> -->
     </div>
     <div id="response"></div>
+    <section class="chat-page">
+      <div class="chat-screen">
+        <div class="user-chat">
+          <div class="user-chat-content">This is user-chat</div>
+        </div>
+
+        <div class="ai-chat">
+          <img class="ai-img" src="asset/img/ai_img_cat.jpg" />
+          <div class="ai-chat-content">This is AI-chat</div>
+        </div>
+      </div>
+      <div class="chat-input">
+        <div>
+          <input class="chat-input-text" id="question" type="text" placeholder="Say 'Hi' to start chat" autofocus required />
+          <button class="chat-input-button" onclick="askQuestion()">
+            <!-- <button onclick="askQuestion()">전송</button> -->
+            <svg class="svg-send" xmlns="http://www.w3.org/2000/svg" height="1.7em" viewBox="0 0 512 512">
+              <style>
+                svg {
+                  fill: #ffffff;
+                }
+              </style>
+              <path
+                d="M16.1 260.2c-22.6 12.9-20.5 47.3 3.6 57.3L160 376V479.3c0 18.1 14.6 32.7 32.7 32.7c9.7 0 18.9-4.3 25.1-11.8l62-74.3 123.9 51.6c18.9 7.9 40.8-4.5 43.9-24.7l64-416c1.9-12.1-3.4-24.3-13.5-31.2s-23.3-7.5-34-1.4l-448 256zm52.1 25.5L409.7 90.6 190.1 336l1.2 1L68.2 285.7zM403.3 425.4L236.7 355.9 450.8 116.6 403.3 425.4z"
+              />
+            </svg>
+          </button>
+        </div>
+      </div>
+    </section>
   </body>
-  <script>
-    function logout() {
-      document.cookie = `loginToken=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;`;
-    }
-
-    function askQuestion() {
-      const questionInput = document.getElementById("question");
-      const question = questionInput.value;
-      if (question) {
-        fetch("http://127.0.0.1:8000/", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-          },
-          body: JSON.stringify({ prompt: question, room: "test" }),
-        })
-          .then((response) => response.json())
-          .then((data) => {
-            // Display AI's response on the page
-            const responseDiv = document.getElementById("response");
-            responseDiv.innerText += `AI's Response: ${data[0]["response"]}\n`;
-            //   console.log(data);
-            //   console.log(data[0]["response"]);
-            //   alert(data[0]["response"]);
-          })
-          .catch((error) => {
-            console.error("Error:", error);
-          });
-      }
-    }
-
-    function getCookie(name) {
-      const value = `; ${document.cookie}`;
-      const parts = value.split(`; ${name}=`);
-      if (parts.length === 2) return parts.pop().split(";").shift();
-    }
-    loginToken = getCookie("loginToken");
-    console.log(loginToken);
-    document.addEventListener("DOMContentLoaded", function () {
-      fetch("http://127.0.0.1:8000/?token=" + loginToken + "&room=test", {
-        headers: {
-          //   token: `Bearer ${token}`,
-        },
-      })
-        .then((response) => {
-          console.log(response);
-          return response.json();
-        })
-        .then((data) => {
-          // 요청이 성공적으로 완료된 후에 실행될 코드
-          console.log("서버 응답 데이터:", data);
-        })
-        .catch((error) => {
-          // 요청 중 에러가 발생했을 때 실행될 코드
-          console.error("요청 에러:", error);
-        });
-    });
-  </script>
-  <!-- <script src="./js/main.js"></script> -->
+  <script></script>
 </html>
