--- a/local-front/chat.html
+++ b/local-front/chat.html
@@ -7,6 +7,8 @@
     <title>ChatGPT 채팅</title>
   </head>
   <body>
+    <div class="loader-container"><img class="loading-img" src="asset/gif/loadingImg.gif" /></div>
+
     <h1>ChatGPT 채팅</h1>
 
     <a href="./index.html">메인</a>
