--- a/local-front/index.html
+++ b/local-front/index.html
@@ -1,64 +1,69 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <title>메인</title>
   </head>
   <body>
-    <h1>메인</h1>
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+        <a class="navbar-brand mw-5" href="./index.html">ㅊㅐㅅㅈㅣㅍㅣㅌㅣ</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <a href="./login.html">로그인</a>
-    <a onclick="logout()" href="./index.html">로그아웃</a>
-    <a href="./register.html">회원가입</a>
-    <a href="./chat.html">채팅</a>
-    <!-- 
-    <div>
-      <label for="question">prompt :</label>
-      <input type="text" id="question" />
-      <button onclick="askQuestion()">전송</button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="./chat.html">채팅</a>
+            </li>
+          </ul>
+          <ul class="navbar-nav ms-auto nav-btn"></ul>
+        </div>
+      </div>
+    </nav>
+    <div class="container" id="container">
+      <h1>메인</h1>
     </div>
-    <div id="response"></div> -->
   </body>
   <script>
     function logout() {
       document.cookie = `loginToken=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;`;
     }
 
-    // function askQuestion() {
-    //   const questionInput = document.getElementById("question");
-    //   const question = questionInput.value;
-    //   if (question) {
-    //     fetch("http://127.0.0.1:8000/", {
-    //       method: "POST",
-    //       headers: {
-    //         "Content-Type": "application/json",
-    //       },
-    //       body: JSON.stringify({ prompt: question, room: "test" }),
-    //     })
-    //       .then((response) => response.json())
-    //       .then((data) => {
-    //         // Display AI's response on the page
-    //         const responseDiv = document.getElementById("response");
-    //         responseDiv.innerText += `AI's Response: ${data[0]["response"]}\n`;
-    //         //   console.log(data);
-    //         //   console.log(data[0]["response"]);
-    //         //   alert(data[0]["response"]);
-    //       })
-    //       .catch((error) => {
-    //         console.error("Error:", error);
-    //       });
-    //   }
-    // }
-
     function getCookie(name) {
       const value = `; ${document.cookie}`;
       const parts = value.split(`; ${name}=`);
       if (parts.length === 2) return parts.pop().split(";").shift();
     }
-    loginToken = getCookie("loginToken");
+
+    const loginToken = getCookie("loginToken");
+    const username = getCookie("User");
+    const navBtnList = document.querySelector(".nav-btn");
     if (loginToken) {
-      console.log(loginToken);
+      const container = document.getElementById("container");
+      container.innerHTML += "<p>채팅방 리스트</p>";
+
+      console.log(navBtnList);
+      navBtnList.innerHTML = `
+        <li class="nav-item">
+            <span class="navbar-text"> 환영합니다 ${username} 님 | </span>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" onclick="logout()" href="./index.html">로그아웃</a>
+        </li>`;
     } else {
+      navBtnList.innerHTML = `
+        <li class="nav-item">
+            <a class="nav-link" href="./login.html">로그인</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="./register.html">회원가입</a>
+        </li>
+        `;
     }
   </script>
-  <!-- <script src="./js/main.js"></script> -->
 </html>
