--- a/local-front/index.html
+++ b/local-front/index.html
@@ -8,7 +8,7 @@
     <title>메인</title>
   </head>
   <body>
-    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-info">
       <div class="container">
         <a class="navbar-brand mw-5" href="./index.html">ㅊㅐㅅㅈㅣㅍㅣㅌㅣ</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,7 +25,7 @@
         </div>
       </div>
     </nav>
-    <div class="container" id="container">
+    <div class="container mt-3" id="container">
       <h1>메인</h1>
     </div>
   </body>
@@ -45,9 +45,8 @@
     const navBtnList = document.querySelector(".nav-btn");
     if (loginToken) {
       const container = document.getElementById("container");
-      container.innerHTML += "<p>채팅방 리스트</p>";
+      container.innerHTML += "<p>채팅방 리스트</p><li><a href='./chat.html'>test1</a></li> <li><a href='./chat.html'>test2</a></li>";
 
-      console.log(navBtnList);
       navBtnList.innerHTML = `
         <li class="nav-item">
             <span class="navbar-text"> 환영합니다 ${username} 님 | </span>
